<resources>
    <string name="app_name">Farmer</string>
    <string name="farmer_s_pride">Farmer\'s Pride</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="farmers_partner">Farmers Partner</string>
    <string name="by">By</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="enter_your_email_id">Enter Your Email ID (Optional)</string>
    <string name="optional_mobile_number">Mobile Number (Optional)</string>
    <string name="crop_name">Crop Name:-</string>
    <string name="select_crop_image">Select Crop Image</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="enter_your_rate_per_kg">Enter Your Rate Per KG</string>
    <string name="how_many_kg_you_have">How Many KG You Have</string>
    <string name="enter_detail_about_crop">Enter Detail About Crop</string>
    <string name="registration_form">Registration Form</string>
    <string name="enter_your_satbarano">Enter Your satBaraNo (7 12)</string>
    <string name="city">City :-</string>
    <string name="pincode">Pincode :-</string>
    <string name="state">State :-</string>
    <string name="country">Country :-</string>
    <string name="address">Address :-</string>
    <string name="name">Name :-</string>
    <string name="mobile_no_optional">Mobile No (Optional) :- </string>
    <string name="not_uploaded">Not Uploaded</string>
    <string name="email_id">Email ID :- </string>
    <string name="detail_about_farm">Detail About farm</string>
    <string name="what_you_want_to_sell_please_enter_detail_below">What You Want To Sell Please Enter Detail Below :-</string>
    <string name="mobile_no">Mobile No :-</string>
    <string name="satbara_no">SatBara No :-</string>
    <string name="edit">Edit</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="profile">Profile</string>
    <string name="enter_your_detail">Enter Your Detail</string>
    <string name="enter_detail_about_sugarcane">Enter Detail About SugarCane</string>
    <string name="how_many_acre_you_grown_up_sugarcane">How many Acre You grown up SugarCane</string>
    <string name="approx_how_many_tones_sugarcane_you_have">Approx How Many Tones Sugarcane You Have</string>
    <string name="click_here_to_read_news"><![CDATA[Click here to read news —>]]></string>
    <string name="hii">Hii</string>
    <string name="select_your_language">Select your Language</string>
    <string name="next">next</string>
    <string name="headline">Headline :-</string>
    <string name="description">Description :-</string>
    <string name="crop_kg_tone">Crop KG / Tone :-</string>
    <string name="rate">Rate :-</string>
    <string name="location">Location :-</string>
    <string name="click_here_full_view_information">click Here Full View Information -></string>
    <string name="potato">Potato</string>
    <string name="corn">Corn</string>
    <string name="onion">Onion</string>
    <string name="peanut">Peanut</string>
    <string name="rice">Rice</string>
    <string name="ginger">Ginger</string>
    <string name="apple">Apple</string>
    <string name="coconut">Coconut</string>
    <string name="guava">Guava</string>
    <string name="mango">Mango</string>
    <string name="sugar_factory">Sugar Factory</string>
    <string name="Vegetable">Vegetable</string>
    <string name="Fruits">Fruits</string>
    <string name="Factory">Factory</string>
    <string name="news_section">News Section</string>
    <string name="slide_your_language_wise_news">Slide a news seaction according to your language</string>
    <string name="Hindi">Hindi</string>
    <string name="Marathi">Marathi</string>
    <string name="Punjabi">Punjabi</string>
    <string name="Assamese">Assamese</string>
    <string name="Location_is_off_Please_Enable_location">Location is off. Please Enable location</string>
    <string name="yes">Yes</string>
    <string name="setting">Setting</string>
    <string name="my_shop">My Shop</string>
    <string name="today_s_weather">Today\'s Weather</string>
    <string name="enter_your_crop_weight">Enter Your Crop Weight</string>
    <string name="uploaded">Uploaded Successfully</string>
    <string-array name="array_default_state">
        <item>Select Your State</item>
    </string-array>
    <string-array name="array_indian_states">
        <item>Select Your State</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="array_default_districts">
        <item>Select Your District</item>
    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        <item>Select Your District</item>
        <item>The Kirlampudi Sugar Mills Ltd.</item>
        <item>Shri Sarvaraya Sugar Ltd.</item>
        <item>Nava Bharat Ferro Alloys Ltd.</item>
        <item>Andhra Sugars Ltd.</item>
        <item>The Palakol Coop. Sugars ltd.</item>
        <item>VVS Sugars (The Jeypore Sugar Co. Ltd.)</item>
        <item>West Godavari Coop. Sugars Ltd.</item>
        <item>The Andhra Sugars Ltd.</item>
        <item>The Chodavaram Coop. Sugars Ltd.</item>
        <item>Anakapalle Coop  Agricultural and Industrial Society Ltd.</item>
        <item>Etikoppaka Coop. Agril and Indl. Society Ltd.</item>
        <item>The Thandava Coop. Sugars Ltd.</item>
        <item>Shri Vijayarama Gajapati Coop. Sugars Ltd.</item>
        <item>Amadavalasa Coop Agricultural and Industrial Society Ltd.</item>
        <item>Varalakshmi Sugars Ltd.</item>
        <item>The KCP Sugar and Industries Corpn. Ltd.</item>
        <item>The KCP Sugar and Industries Corpn. Ltd.</item>
        <item>Delta Suagar Ltd.</item>
        <item>The Nizam Sugar Factory Ltd.</item>
        <item>The Nizamabad Coop. Sugar Factory Ltd.</item>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
    </string-array>
    <string-array name="array_arunachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Anjaw</item>
        <item>Siang</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kamle</item>
        <item>Kra Daadi</item>
        <item>Kurung Kumey</item>
        <item>Lepa Rada</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Siang</item>
        <item>Lower Subansiri</item>
        <item>Namsai</item>
        <item>Pakke Kessang</item>
        <item>Papum Pare</item>
        <item>Shi Yomi</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="array_assam_districts">
        <item>Select Your District</item>
        <item>The Assam Coop. Sugar Mils Ltd.</item>
        <item>Arihant Sugar Ltd.</item>
        <item>Nowgong Coop. Sugar Mills Ltd.</item>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
    </string-array>
    <string-array name="array_bihar_districts">
        <item>Select Your District</item>
        <item>Bihar State Sugar Corpn. Ltd.</item>
        <item>Bihar State Sugar Corpn Ltd. </item>
        <item>The Bihar State Sugar Corpn. Ltd.</item>
        <item>New India Sugar Mills Ltd.</item>
        <item>Bihar State Sugar Corpn. Ltd.</item>
        <item>Bihar State Sugar Corpn.Ltd</item>
        
        <item>Motihari Chini Udyog Ltd.</item>
        <item>M.P.Chini Industries Ltd.</item>
        <item>Champaran Sugar Co. Ltd.</item>
        <item>Bagaha Chini Mills Ltd.</item>
        <item>The Oudh Sugar Mills Ltd.</item>
        <item>Harinagar Sugar Mills Ltd.</item>
        <item>Champaran Sugar Co. Ltd.</item>
        <item>Bharat Sugar Mills Ltd.</item>
        <item>Sasa Musa Sugar Works Pvt. Ltd.</item>
        <item>The Vishnu Sugar Mills Ltd.</item>
        <item>Cawnpore Sugar Works Ltd.</item>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
    </string-array>
    <string-array name="array_chhattisgarh_districts">
        <item>Select Your District</item>
        <item>Bhoramdev Sahakari Sakhar Utpadak Karkhana Maryadit</item>
        <item>M/s Maa Mahamaya SSK Ltd.</item>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
    </string-array>
    <string-array name="array_goa_districts">
        <item>Select Your District</item>
        <item>Sanjivani SSK Ltd.</item>
        
    </string-array>
</resources>